# MSight_Vision

./: Dockerfile  Dockerfile-cpu  README.md  pyproject.toml
cli/: launch_2d_viewer.py  launch_custom_fuser.py  launch_finite_difference_state_estimator.py  launch_road_user_list_viewer.py  launch_sort_tracker.py  launch_yolo_onestage_detection.py
examples/fullstack/: config.yaml  main.py  utils.py
msight_vision/: __init__.py  base.py  detector_merger.py  detector_yolo.py  fuser.py  localizer.py  state_estimator.py  tracker.py  warper.py
msight_vision/msight_core/: __init__.py  detection.py  fusion.py  state_estimation.py  tracking.py  viewer.py  warper.py
msight_vision/utils/: __init__.py  data.py  typing.py  vis.py
